# CMake_Practice

./: CMakeLists.txt  OLASConfig.h.in  configure.sh  main.cpp
Adder/: CMakeLists.txt  adder.cpp
